# simple-project-template

./: .devcontainer.json  .do-not-edit  .dockerignore  .env  .gitignore  .npmrc  .prettierrc  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  README.md  app.config.ts  app.json  build.rs  database.sql  flake.nix  metro.config.js  package-lock.json  package.json  sea-config.json  tailwind.config.js  tauri.conf.json  tsconfig.json  wrangler.jsonc
.github/workflows/: ci.dockerfile  ci.yml  cleanup-images.sh  nix-flake.yml  rapid-deploy.yml  rapid-release.yml
scripts/: docker-entrypoint.sh  generate-icons.ts  sandbox.sh  tag.ts  version.ts
src/: global.css  server.ts  worker.ts
src-native/: test.h  test.mm  test.test.c++
src-rust/: lib.rs
src/app/: _layout.tsx  modal.tsx
src/app/(tabs)/: _layout.tsx  about.tsx  explore.tsx  gallery.tsx  index.tsx
src/app/api/: database.sql  dream+api.ts  dream-system-prompt.txt  mode+api.ts
src/components/: background-layer.tsx  coding-dino.tsx  dream-panel.tsx  hello-wave.tsx  language-selector.tsx  logo.tsx  popup.tsx  reading-dino.tsx  sleeping-dino.tsx  themed-text.tsx  themed-view.tsx
src/components/ui/: button.tsx  checkbox.tsx  divider.tsx  icon-symbol.tsx  liquid-glass.tsx  toggle.tsx
src/constants/: theme.ts
src/hooks/: use-background.ts  use-color-scheme.ts  use-color-scheme.web.ts  use-rust.ts  use-scale-animation.ts  use-translation.ts  use-wasm.ts  useThemeColors.ts
src/lib/: background-patterns.tsx  dream-history.ts  i18n.ts  rust.ts  rust.tsx  translations.ts  version.ts  wasm.ts
src/redux/: store.ts
src/redux/state/: apiSlice.ts  backgroundSlice.ts  languageSlice.ts  themeSlice.ts
src/server/: db.d1.ts  db.node.ts  db.ts
