[package]
name = "simple-project-template"
edition = "2024"

[dependencies]
wasm-bindgen = "=0.2.114"
panic-halt = "1"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
path = "src-rust/lib.rs"

[profile.release]
panic = "abort"

[[bin]]
name = "hello_world"
path = "src-rust/bin/hello_world/bin.rs"
