[package]
name = "simple-project-template"
edition = "2024"

[features]
native-addon = ["dep:napi", "dep:napi-derive"]
tauri-app = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-build"]

[dependencies]
wasm-bindgen = "=0.2.114"
napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }

[build-dependencies]
napi-build = "2"
tauri-build = { version = "2", features = [], optional = true }

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
path = "src-rust/lib.rs"

[profile.release]
panic = "abort"

[[bin]]
name = "hello_world"
path = "src-rust/bin/hello_world/bin.rs"

[[bin]]
name = "tauri-app"
path = "src-rust/bin/tauri-app/main.rs"
required-features = ["tauri-app"]
