[package]
name = "simple-project-template"
version = "0.0.0"
edition = "2024"
default-run = "tauri-app"

[features]
tauri-app = ["dep:napi", "dep:napi-derive", "dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-build", "dep:rust-embed"]

[dependencies]
wasm-bindgen = "=0.2.114"
napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
rust-embed = { version = "8", optional = true }

[build-dependencies]
napi-build = "2"
tauri-build = { version = "2", features = [], optional = true }

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
path = "src-rust/lib.rs"

[profile.release]
panic = "abort"

[[bin]]
name = "hello-world"
path = "src-rust/bin/hello-world/bin.rs"

[[bin]]
name = "tauri-app"
path = "src-rust/bin/tauri-app/main.rs"
required-features = ["tauri-app"]
